--- a/artizen_Site_placeholder/index.html
+++ b/artizen_Site_placeholder/index.html
@@ -7,7 +7,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
+       
         <!-- Favicon -->
         <link href="favicon.ico" rel="shortcut icon">
 
@@ -15,6 +15,8 @@
 
         <!-- Bootstrap stylesheets -->
         <link href="bootstrap.min.css" rel="stylesheet">
+        <link href="artizen_website.css" rel="stylesheet" type="text/css">
+
 
         <!-- Template stylesheets -->
         
@@ -107,6 +109,7 @@ We offer an array of printing services including digital, large-format, art repr
 </div>
 </div>
 </div>
+
 
 <!-- /Main content -->
 
